# aif-meta-cogames

./: .gitignore  AIF_MATH_FORMALIZATION.md  README.md  pyproject.toml
docs/: DESIGN.md  EXPERIMENT_PLAN.md  LITERATURE_REVIEW.md  ROADMAP.md
scripts/: analyze_learned.py  deep_pipeline.sh  deep_pipeline_continue.sh  denovo_learn.py  diagnose_eval.py  differentiable_bmr.py  eval_ablation.sh  eval_aif_agent.py  eval_b_pipeline.sh  extended_train.sh  extended_train_v2.sh  fit_pomdp.py  iterative_deep_train.sh  kickstart_pretrain.sh  learn_from_teacher.py  learn_parameters.py  smoke_test_factored.py  structure_learn_pipeline.sh
src/aif_meta_cogames/: __init__.py
src/aif_meta_cogames/aif_agent/: __init__.py  cogames_policy.py  discretizer.py  fit_matrices.py  generative_model.py
src/aif_meta_cogames/env/: obs_encoder.py  trajectory_dataset.py
tests/: run_mock_eval.py  test_aif_agent.py  test_cogames_policy.py  test_minimal_2agent.py
